Fixed search menu alignment and changed the dropdown a bit

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,12 +56,6 @@ body {
 .container {
     border: 1px solid white;
 }
-/* this is how I get the three divs in one line */
-.containerOne {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr; 
-    text-align: center;
-}
 
 .list {
     list-style: none;
@@ -69,67 +63,21 @@ body {
 
 .search {
     margin-bottom: 10px;
-    width: 550px;
+    width: 650px;
     height: 25px;
     margin: 20px auto;
     padding: 13px;
 }
-
-.dropdown {
-    margin-bottom: 10px;
-    width: 12px;
-    height: 25px;
-    margin: 20px auto;
-    padding: 13px; 
-}
-
-.dropbtn:hover {
-    cursor: pointer;
-}
-
-.dropbtn {
-    width: 100px;
-    height: 25px;
-    font-size: 15px; 
-    font-weight: bold;
-}
-.dropdown:hover {
-    cursor: pointer;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    min-width: 12px;
-    background-color: whitesmoke
-
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 12px;
-    text-decoration: none;
-    display: block;
-    font-family: 'Times New Roman', Times, serif;
-    font-style: oblique;
-    font-weight: bold;
-}
-
-.dropdown-content a:hover {background-color: #e4271a;}
-.dropdown:hover .dropdown-content {display: block;}
-.dropdown:hover .dropbtn {background-color:whitesmoke;}
 
 .search input {
-    width: 91%;
+    width: 75%;
     height: 100%;
- }
+    float: left;
+}
 
 .searchButton {
-    margin-bottom: 10px;
-    width: 5px;
-    height: 25px;
-    margin: 20px auto;
-    padding: 13px;
+    float: right;
+    border: 1px solid white;
 }
 
 .searchButton button img {
@@ -171,4 +119,33 @@ ul {
     height: 150px;
     border: 1px solid white;
     margin-bottom: 15px;
+}
+
+.dropdown {
+    float: left;   
+    margin: 0 10px; 
+}
+
+.dropbtn {
+    background-color: #f1f1f1;
+    height:30px;
+}
+
+.dropdown-content {
+    display:none;
+    position: absolute;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    display: block;
+    color: black;
+    background-color:white;
+    width: 78px;
+    text-decoration: none;
+    border-bottom: 1px solid rgb(175, 168, 168);
+}
+
+.dropdown:hover .dropdown-content {
+    display:block;
 }
